updated NEWS file and vignette
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@109482 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+CHANGES IN VERSION 1.4.0
+------------------------
+
+    o Added importTranscripts() for importing annotation from GFF format
+
+    o Added plotCoverage() for visualization of per-base read coverage
+      and junction read counts
+
+    o Added predictVariantEffects() for predicting the effect of splice 
+      variants on annotated protein-coding transcripts
+
+    o findSGVariants() is now able to deal with more complex gene models
+
+    o SGVariants columns closed5p and closed3p now refer to individual
+      splice variants rather than the splice event they belong to
+
+    o Bug fixes and other improvements
+
+
 CHANGES IN VERSION 1.2.0
 ------------------------
 
